log/knet1_tfp59_pools_190129_1611
  File "train_drone.py", line 415
    elif: targets == 'nh_pools':
        ^
SyntaxError: invalid syntax
